@@ -4,6 +4,11 @@ import software.amazon.awscdk.services.dynamodb.Attribute;
 import software.amazon.awscdk.services.dynamodb.AttributeType;
 import software.amazon.awscdk.services.dynamodb.BillingMode;
 import software.amazon.awscdk.services.dynamodb.Table;
+import software.amazon.awscdk.services.iam.Effect;
+import software.amazon.awscdk.services.iam.Policy;
+import software.amazon.awscdk.services.iam.PolicyStatement;
+import software.amazon.awscdk.services.iam.Role;
+import software.amazon.awscdk.services.iam.ServicePrincipal;
 import software.amazon.awscdk.services.lambda.Code;
 import software.amazon.awscdk.services.lambda.Function;
 import software.amazon.awscdk.services.lambda.SnapStartConf;
@@ -13,6 +18,10 @@ import software.amazon.awscdk.Stack;
 import software.amazon.awscdk.StackProps;
 import software.amazon.awscdk.Duration;
 import software.amazon.awscdk.services.lambda.Runtime;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
 public class InfraStack extends Stack {
 
@@ -31,35 +40,40 @@ public class InfraStack extends Stack {
                         .build())
                 .build();
 
+        Role lambdaRole = Role.Builder.create(this, "Role")
+                .roleName("invokeNotifierFunctionRole")
+                .assumedBy(new ServicePrincipal("scheduler.amazonaws.com"))
+                .build();
+
         Function newVideoHandler = Function.Builder.create(this,"NewVideoHandler")
                 .runtime(Runtime.JAVA_17)
                 .memorySize(2048)
-                .handler("software.reinvent.serverlessflix.claps.NewVideoHandler")
+                .handler("software.serverlessflix.claps.NewVideoHandler")
                 .timeout(Duration.seconds(30))
                 .snapStart(SnapStartConf.ON_PUBLISHED_VERSIONS)
-                .code(Code.fromAsset("../after/scheduled-job/target/svs402-scheduled-job-1.0.jar"))
+                .code(Code.fromAsset("../after/new-video-function/target/svs402-new-video-function-1.0.jar"))
                 .tracing(Tracing.ACTIVE)
+                .environment(Map.of(
+                        "TABLE_NAME", videoClapsTable.getTableName(),
+                        "CREATOR_NOTIFICATION_TARGET", "amazing",
+                        "CREATOR_NOTIFICATION_ROLE_ARN", lambdaRole.getRoleArn()))
                 .build();
 
         videoClapsTable.grantReadWriteData(newVideoHandler);
 
-//        Role lambdaRole = Role.Builder.create(this, "Role")
-//                .assumedBy(new ServicePrincipal("scheduler.amazonaws.com"))
-//                .build();
-//        List<Role> roles = new ArrayList<>();
-//        roles.add(lambdaRole);
-//
-//        PolicyStatement statement = PolicyStatement.Builder.create()
-//                .effect(Effect.ALLOW)
-//                .actions(Arrays.asList("lambda:InvokeFunction"))
-//                .resources(Arrays.asList(newVideoHandler.getFunctionArn()))
-//                .build();
-//        Policy policy = Policy.Builder.create(this, "Policy")
-//                .roles(roles)
-//                .policyName("ScheduleToInvokeLambdas")
-//                .statements(Arrays.asList(statement))
-//                .build();
-//
+
+
+        PolicyStatement statement = PolicyStatement.Builder.create()
+                .effect(Effect.ALLOW)
+                .actions(List.of("lambda:InvokeFunction"))
+                .resources(List.of(newVideoHandler.getFunctionArn()))
+                .build();
+        Policy policy = Policy.Builder.create(this, "Policy")
+                .roles(List.of(lambdaRole))
+                .policyName("ScheduleToInvokeLambdas")
+                .statements(List.of(statement))
+                .build();
+
 //        CfnScheduleGroup scheduleGroup = CfnScheduleGroup.Builder.create(this, "scheduleGroup")
 //                .name("lambdaSchedules")
 //                .build();
